@@ -1,4 +1,4 @@
-# Anjuta Version 1.0.2 
+# Anjuta Version 1.2.0 
 Compatibility Level: 1 
 
 <PROJECT_DESCRIPTION_START>
@@ -24,7 +24,7 @@ a number of advanced programming facilities.<PROJECT_DESCRIPTION_END>
 
 props.file.type=project
 
-anjuta.version=1.0.2
+anjuta.version=1.2.0
 anjuta.compatibility.level=1
 
 project.name=anjuta
@@ -50,17 +50,14 @@ project.menu.need.terminal=0
 
 project.configure.options=
 anjuta.program.arguments=
-filter.file.unmatch=*.so *.o *.a *.la
-filter.file.ignore.hidden=0
-filter.dir.ignore.hidden=0
-preferences.indent.automatic=1
-preferences.use.tabs=1
-preferences.indent.opening=0
-preferences.indent.closing=0
-preferences.tabsize=4
 preferences.indent.size=4
-preferences.autoformat.style=Custom style
+preferences.use.tabs=1
 preferences.autoformat.custom.style=-bad -bap -bbb -sob -nbbo -nbc -bl -fca -fc1 -lc80 -d0 -c50 -cd33 -cp10 -sc -ncdb -bl -bli0 -ncdw -cli0 -cbi4 -ss -pcs -cs -bs -saf -sai -saw -di0 -nbfda -psl -brs -i4 -ci4 -lp -ts4 -l80 -nhnl -pmt 
+preferences.autoformat.style=Custom style
+preferences.tab.size=4
+preferences.indent.opening=0
+preferences.indent.automatic=1
+preferences.indent.closing=0
 preferences.autoformat.disable=0
 
 module.include.name=.
@@ -704,24 +701,4 @@ module.po.files=\
 	zh_CN.po\
 	zh_TW.po
 
-compiler.options.supports=
-compiler.options.include.paths=
-compiler.options.library.paths=
-compiler.options.libraries=
-compiler.options.libraries.selected=
-compiler.options.defines=
-compiler.options.warning.buttons=0 0 1 1 1 1 0 0 1 1 0 1 1 1 1 0 
-compiler.options.optimize.buttons=0 0 1 0 
-compiler.options.other.buttons=1 0 
-compiler.options.other.c.flags=
-compiler.options.other.l.flags=
-compiler.options.other.l.libs=
-project.source.paths=\
-	src\
-	widgets\
-	tagmanager\
-	launcher\
-	scintilla\
-	global-tags\
-	printing
-
+project.src.paths=
