@@ -1,44 +1,37 @@
-# List of source files containing translatable strings.
-# Please keep this list in alphabetical order.
-anjuta.desktop.in.in
-plugins/class-gen/clsGen.c
-plugins/patch/patch-plugin.c
-plugins/sample1/plugin-sample1.c
-printing/print-doc.c
-printing/print-util.c
-printing/print.c
-src/CORBA-Server.c
-src/an_file_view.c
-src/an_symbol_view.c
-src/aneditor.cxx
 src/aneditor.h
+src/an_file_view.c
+src/an_file_view.h
 src/anjuta.c
-src/anjuta.h
 src/anjuta_cbs.c
+src/anjuta_dialogs_strings.c
+src/anjuta_dialog_strings.c
 src/anjuta_dirs.c
 src/anjuta_dirs.h
 src/anjuta_gui.c
+src/anjuta.h
 src/anjuta_info.c
 src/anjuta_info.h
+src/anjuta-plugins.c
+src/anjuta-plugins.h
+src/anjuta-tools.c
+src/anjuta-tools.h
+src/an_symbol_view.c
+src/an_symbol_view.h
+src/appwizard.c
+src/appwizard_cbs.c
+src/appwizard_cbs.h
+src/appwizard_gui.c
+src/appwizard.h
 src/appwiz_page1.c
 src/appwiz_page2.c
 src/appwiz_page3.c
 src/appwiz_page4.c
-src/appwizard.c
-src/appwizard.h
-src/appwizard_cbs.c
-src/appwizard_cbs.h
-src/appwizard_gui.c
 src/attach_process.c
-src/attach_process.h
 src/attach_process_cbs.c
 src/attach_process_cbs.h
-src/attach_process_gui.c
+src/attach_process.h
 src/breakpoints.c
 src/breakpoints.h
-src/breakpoints_cbs.c
-src/breakpoints_cbs.h
-src/breakpoints_gui.c
 src/build_file.c
 src/build_file.h
 src/build_project.c
@@ -53,38 +46,40 @@ src/compile.c
 src/compile.h
 src/compiler_options.c
 src/compiler_options.h
-src/compiler_options_cbs.c
-src/compiler_options_cbs.h
-src/compiler_options_gui.c
 src/configurer.c
 src/configurer.h
 src/controls.c
 src/controls.h
 src/cvs.c
 src/cvs_cbs.c
+src/cvs_cbs.h
 src/cvs_gui.c
+src/cvs_gui.h
+src/cvs.h
 src/debugger.c
 src/debugger.h
+src/debug_tree.c
+src/debug_tree.h
 src/defaults.c
 src/defaults.h
 src/dnd.c
 src/dnd.h
 src/executer.c
 src/executer.h
+src/file_history.c
+src/file_history.h
 src/fileselection.c
 src/fileselection.h
 src/find_in_files.c
-src/find_in_files.h
 src/find_in_files_cbs.c
 src/find_in_files_cbs.h
-src/find_in_files_gui.c
+src/find_in_files.h
 src/find_replace.c
 src/find_replace.h
 src/find_text.c
 src/find_text.h
 src/glade_iface.c
 src/glade_iface.h
-src/glades.c
 src/global.h
 src/gnome_project.c
 src/gnome_project.h
@@ -97,86 +92,87 @@ src/launcher.h
 src/lexer.h
 src/main.c
 src/main_menubar.c
-src/main_menubar.h
 src/main_menubar_def.h
+src/main_menubar_def_in.h
+src/main_menubar.h
 src/mainmenu_callbacks.c
 src/mainmenu_callbacks.h
+src/memory.c
+src/memory.h
 src/message-manager-dock.c
 src/message-manager-dock.h
-src/message-manager-private.cc
-src/message-manager-private.h
-src/message-manager.cc
 src/message-manager.h
-src/messagebox.c
-src/messagebox.h
+src/message-manager-private.h
 src/pixmaps.h
 src/preferences.c
 src/preferences.h
-src/preferences_gui.c
 src/project_config.c
 src/project_config.h
 src/project_dbase.c
-src/project_dbase.h
 src/project_dbase_gui.c
+src/project_dbase.h
 src/project_import.c
 src/project_import_cbs.c
+src/project_import_cbs.h
 src/project_import_gui.c
-src/properties.cxx
+src/project_import.h
+src/project_type.c
+src/project_type.h
 src/properties.h
 src/registers.c
-src/registers.h
 src/registers_cbs.c
 src/registers_cbs.h
 src/registers_gui.c
+src/registers.h
 src/resources.c
 src/resources.h
+src/session.c
+src/session.h
 src/sharedlib.c
-src/sharedlib.h
 src/sharedlib_cbs.c
 src/sharedlib_cbs.h
 src/sharedlib_gui.c
+src/sharedlib.h
 src/signals.c
-src/signals.h
 src/signals_cbs.c
 src/signals_cbs.h
 src/signals_gui.c
+src/signals.h
 src/source.c
 src/source.h
 src/splash.c
 src/splash.h
 src/src_paths.c
 src/src_paths.h
-src/src_paths_cbs.c
-src/src_paths_cbs.h
-src/src_paths_gui.c
 src/stack_trace.c
-src/stack_trace.h
 src/stack_trace_cbs.c
 src/stack_trace_cbs.h
 src/stack_trace_gui.c
+src/stack_trace.h
+src/style-editor.c
+src/style-editor.h
 src/support.c
+src/support.h
 src/text_editor.c
-src/text_editor.h
 src/text_editor_cbs.c
 src/text_editor_cbs.h
 src/text_editor_gui.c
 src/text_editor_gui.h
+src/text_editor.h
 src/text_editor_menu.c
 src/text_editor_menu.h
 src/toolbar.c
-src/toolbar.h
 src/toolbar_callbacks.c
 src/toolbar_callbacks.h
+src/toolbar.h
 src/utilities.c
 src/utilities.h
 src/watch.c
-src/watch.h
 src/watch_cbs.c
 src/watch_cbs.h
 src/watch_gui.c
+src/watch.h
+src/widget-registry.c
+src/widget-registry.h
 src/wizard_gui.c
-widgets/e-shell-about-box.c
-widgets/e-shell-about-box.h
-widgets/gnomedirlist.c
-widgets/gnomefilelist.c
-widgets/scroll-menu.c
+src/wizard_gui.h
