@@ -177,12 +177,6 @@ gchar *s = N_("Choose autocomplete for single match");
 gchar *s = N_("Autocomplete XML/HML closing tags");
 gchar *s = N_("Pressing tab indents");
 gchar *s = N_("Pressing backspace un-indents");
-gchar *s = N_("Line numbers margin width (pixels)");
-gchar *s = N_("Autosave timer interval in minutes");
-gchar *s = N_("Session timer interval in minutes");
-gchar *s = N_("Editor caret (cursor) width in pixel");
-gchar *s = N_("Autocomplete automatic size");
-gchar *s = N_("Caret blink period in milli-seconds");
 gchar *s = N_("Do not show");
 gchar *s = N_("Sort in alphabetical order");
 gchar *s = N_("Position:");
@@ -192,6 +186,12 @@ gchar *s = N_("Bottom");
 gchar *s = N_("Left");
 gchar *s = N_("Right");
 gchar *s = N_("Editor notebook tabs");
+gchar *s = N_("Line numbers margin width (pixels)");
+gchar *s = N_("Autosave timer interval in minutes");
+gchar *s = N_("Session timer interval in minutes");
+gchar *s = N_("Editor caret (cursor) width in pixel");
+gchar *s = N_("Autocomplete automatic size");
+gchar *s = N_("Caret blink period in milli-seconds");
 gchar *s = N_("Enable comments folding");
 gchar *s = N_("Compact folding");
 gchar *s = N_("Enable python comments folding");
@@ -271,21 +271,18 @@ gchar *s = N_("Enable automatic messages indicators");
 gchar *s = N_("Normal message indicator style:");
 gchar *s = N_("Warning message indicator style:");
 gchar *s = N_("Error message indicator style:");
-gchar *s = N_("Underline-Plain");
 gchar *s = N_("*");
 gchar *s = N_("Underline-Plain");
 gchar *s = N_("Underline-Squiggle");
 gchar *s = N_("Underline-TT");
 gchar *s = N_("Diagonal");
 gchar *s = N_("Strike-Out");
-gchar *s = N_("Underline-Plain");
 gchar *s = N_("*");
 gchar *s = N_("Underline-Plain");
 gchar *s = N_("Underline-Squiggle");
 gchar *s = N_("Underline-TT");
 gchar *s = N_("Diagonal");
 gchar *s = N_("Strike-Out");
-gchar *s = N_("Underline-Plain");
 gchar *s = N_("*");
 gchar *s = N_("Underline-Plain");
 gchar *s = N_("Underline-Squiggle");
